# prose-lint

./: .gitignore  .gitmodules  .true-up.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  package.json  spec-support.json
.githooks/: pre-push
docs/: AGENTS.md  README.md  adapting-and-self-verifying-a-runtime.md  doctrine.md  spec-integration.md
docs/specs/: 2026-04-08-preflight-briefing-design.md  2026-04-15-runtime-conformance-model.md  2026-04-16-adapter-manifest-model.md
fixtures/briefing/: pure-contract.md  single-file.md  with-imports.md
fixtures/current/: test-summarizer.prose.md
fixtures/invalid/: mixed.prose
fixtures/lsp/: dangling-resume.prose  duplicate-agent.prose  empty-session.prose  unknown-model.prose
fixtures/valid/: basic.prose
scripts/: ci.sh  install-hooks.sh  release.sh
specs/: AGENTS.md  adapter-manifest-schema.json  conformance-capability-schema.json  openprose.json
specs/adapters/: claude-code-v1-md.json  codex-v1-md.json  hermes-v1-md.json  pi-v1-md.json
specs/conformance/: manifest.json
specs/runtime-subjects/: claude-code-self-declared.json  pi-no-extensions-self-declared.json  (+2 more)
src/: AGENTS.md  adapter.rs  adapter_dogfood.rs  briefing.rs  capabilities.rs  cli.rs  conformance.rs  current_lint.rs  diag.rs  fs.rs  hover.rs  lib.rs  lint.rs  lsp.rs  main.rs  profile.rs  release.rs  spec.rs  spec_identity.rs  spec_source.rs  wasm.rs
tests/: adapter_tests.rs  briefing_tests.rs  capabilities_tests.rs  cli_help_tests.rs  hover_tests.rs  lsp_minimal.rs  lsp_tests.rs  spec_identity_tests.rs
(+12 files in other folders)
