[package]
name = "openprose-lint"
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
description = "Deterministic linter for OpenProse"
license = "MIT"
repository = "https://github.com/openprose/prose-lint"
homepage = "https://github.com/openprose/prose-lint"
readme = "README.md"
keywords = ["openprose", "linter", "lsp", "agents", "markdown"]
categories = ["development-tools", "command-line-utilities"]
publish = false
default-run = "openprose-lint"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

# WASM-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Native-only deps (not compiled for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lsp-types = "0.94"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "openprose-lsp"
path = "src/bin/lsp.rs"
